# plot-hole

./: .gitignore  README.md  pyproject.toml  run.py
plot_hole/: __init__.py  app.py  forms.py  models.py  routes.py  site.db
plot_hole/main/: routes.py
plot_hole/posts/: forms.py  routes.py
plot_hole/static/: package-lock.json  package.json
plot_hole/static/css/: mystyles.css
plot_hole/static/sass/: mystyles.scss
plot_hole/templates/: about.html  account.html  base.html  google-map.html  home.html  login.html  map.html  plot.html  plot_form.html  plots.html  register.html
plot_hole/templates/includes/: footer.html  header.html  navbar.html  plot_form.html
plot_hole/users/: forms.py  routes.py
tests/: test_plot_hole.py
