[tool.poetry]
name = "plot-hole"
version = "0.1.0"
description = ""
authors = ["Patrick Trainer <pat.trainer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.1"
Flask-WTF = "^0.14.2"
flask-sqlalchemy = "^2.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
